# workadventure-inspect

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
