[package]
name = "workadventure-inspect"
description = "Inspect a workadventure map for some useful links"
version = "0.1.0"
authors = ["EdJoPaTo <workadventure-inspect-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde_json = "1"
ureq = "2"
url = "2"

# tiled = "0.9"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.serde]
version = "1"
features = ["derive"]